// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AudioTrackInfo component should render correctly if an audio track is present 1`] = `
<Fragment>
  <Memo(Datum)
    label="isSwitchedOff"
    value={false}
  />
  <Memo(Datum)
    label="Switch Off Reason"
    value="mock-switchoff-reason"
  />
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Jitter"
    value={2}
  />
  <Memo(Datum)
    label="Packets Lost"
    value={7}
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value={null}
  />
  <Memo(MediaStreamTrackInfo) />
</Fragment>
`;

exports[`the AudioTrackInfo component should render correctly when switchOffReason and isSwitchedOff are undefined (for local tracks) 1`] = `
<Fragment>
  <Memo(Datum)
    label="Bandwidth"
    value="1,234.56kbps"
  />
  <Memo(Datum)
    label="Codec"
    value="testCodec"
  />
  <Memo(Datum)
    label="Jitter"
    value={2}
  />
  <Memo(Datum)
    label="Packets Lost"
    value={7}
  />
  <Memo(Datum)
    label="Packet Loss Percentage"
    value={null}
  />
  <Memo(MediaStreamTrackInfo) />
</Fragment>
`;

exports[`the AudioTrackPublicationInfo component should render correctly 1`] = `
<Memo(styled.div)>
  <Memo(Datum)
    label="Name"
    value="testName"
  />
  <Memo(Datum)
    label="SID"
    value="testSid"
  />
  <Memo(Datum)
    label="isSubscribed"
    value={true}
  />
  <AudioTrackInfo
    track="testTrack"
    trackSid="testSid"
  />
</Memo(styled.div)>
`;
